added exam info pages

--- a/pages/Certifications/AWS/Cloud_Practitioner_Info.mdx
+++ b/pages/Certifications/AWS/Cloud_Practitioner_Info.mdx
@@ -1,3 +1,38 @@
-# Certified Cloud Practitioner Info
+# AWS - Cloud Practitioner Certification
 
-Satori (悟り) is a Japanese Buddhist term for awakening, "comprehension; understanding".
+```
+Below are the exact resources I used to prepare for and pass the AWS Cloud Practitioner Exam
+My general strategy was to go through all the training materials and immediately take either 
+a free set of practice questions or take a practice test. Then I would review my practice test,
+add to my notes and rinse and repeat until I was consistently getting a passing score
+```
+
+[Certification Details](https://aws.amazon.com/certification/certified-cloud-practitioner/)  
+[CLF-C01 Exam Guide](https://d1.awsstatic.com/training-and-certification/docs-cloud-practitioner/AWS-Certified-Cloud-Practitioner_Exam-Guide.pdf)
+
+| Training Resource | Time |	Cost |
+| ----------- | ----------- | ----------- | 
+| [Exam Prep: AWS Certified Cloud Practitioner](https://explore.skillbuilder.aws/learn/course/external/view/elearning/9449/exam-prep-aws-certified-cloud-practitioner-foundations) | N/A | Free | 
+| AWS Certified Cloud Practitioner Exam Readiness Virtual Event| N/A | Free |	
+| Cloud Essentials Prep Course | N/A | Free |
+| [Sample Exam Questions](https://d1.awsstatic.com/training-and-certification/docs-cloud-practitioner/AWS-Certified-Cloud-Practitioner_Sample-Questions.pdf) | 1 Hour | Free |
+| [AWS Certified Cloud Practitioner Official Practice Question Set (CLF-C01)](https://explore.skillbuilder.aws/learn/course/external/view/elearning/12483/aws-certified-cloud-practitioner-practice-question-set-clf-c01-english) | 1 Hour | Free | 
+| [AWS Certified Cloud Practitioner Exams - Udemy](https://www.udemy.com/course/aws-certified-cloud-practitioner-practice-test/) | 6 Exams | $29.99 |
+
+**Exam Details:**
+| Domain | Details | % of Exam |
+| ----------- | ----------- | ----------- | 		
+| • Domain 1: |  Cloud Concepts | 26% |		
+| • Domain 2: | Security and Compliance | 25% | 
+| • Domain 3: | Technology | 33% |
+| • Domain 4: | Billing and Pricing | 16% |  
+
+[Exam scoring and score reports](https://learn.microsoft.com/en-us/certifications/exam-scoring-reports)  	
+
+**Passing Score = 700**		
+
+90 minutes  
+65 questions, multiple choice/multiple response  
+15 unscored questions that do not affect your score (unidentified)  
+
+[AWS Cloud Practioner Exam Sign Up](https://www.aws.training/certification?src=practitioner)	**$100**
