--- a/pages/Certifications/Azure/Azure_Fundamentals_Info.mdx
+++ b/pages/Certifications/Azure/Azure_Fundamentals_Info.mdx
@@ -1,3 +1,41 @@
-# Satori
+# Azure - Fundamentals Certification
 
-Satori (悟り) is a Japanese Buddhist term for awakening, "comprehension; understanding".
+```
+Below are the exact resources I used to prepare for and pass the Azure Fundamentals Exam
+My general strategy was to go through all the training materials and immediately take either 
+a free set of practice questions or take a practice test. Then I would review my practice test,
+add to my notes and rinse and repeat until I was consistently getting a passing score.
+**NOTE:** The Azure Practice assessment can just be refreshed to see a new batch of questions, so 
+you should take that several times before starting the Udemy practice exams.
+```
+
+[Certification Details](https://learn.microsoft.com/en-us/certifications/azure-fundamentals/)  
+[AZ-900 Exam Details](https://learn.microsoft.com/en-us/certifications/exams/az-900/)  
+[Skills Measured Doc](https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VwUY)  
+
+| Training Resource | Time |	Cost |
+| ----------- | ----------- | ----------- | 
+| [Microsoft Azure Fundamentals: Describe cloud concepts](https://learn.microsoft.com/en-us/training/paths/microsoft-azure-fundamentals-describe-cloud-concepts/?ns-enrollment-type=Collection&ns-enrollment-id=n6ga8m0jkgrwk) | 1 Hour | Free | 
+| [Azure Fundamentals: Describe Azure architecture and services](https://learn.microsoft.com/en-us/training/paths/azure-fundamentals-describe-azure-architecture-services/?ns-enrollment-type=Collection&ns-enrollment-id=n6ga8m0jkgrwk) | 3.5 Hours | Free |	
+| [Azure Fundamentals: Describe Azure management and governance](https://learn.microsoft.com/en-us/training/paths/describe-azure-management-governance/?ns-enrollment-type=Collection&ns-enrollment-id=n6ga8m0jkgrwk) | 2 Hours | Free |
+| [Master the basics with the Azure Fundamentals certification](https://techcommunity.microsoft.com/t5/microsoft-learn-blog/master-the-basics-with-the-azure-fundamentals-certification/ba-p/1650768) |  | Free |
+| [Udemy Azure Prep Course](https://www.udemy.com/course/microsoft-azure-fundamentals_az900/) | 5 Exams | $29.99 | 
+| [Practice Assessment for EXAM AZ-900](https://learn.microsoft.com/en-us/certifications/exams/az-900/practice/assessment?assessment-type=practice&assessmentId=23) | 1 Hour | Free |
+| [Exam Sandbox](https://aka.ms/examdemo) |  | Free |
+
+**Exam Details:**
+| Domain | Details | % of Exam |
+| ----------- | ----------- | ----------- | 		
+| • Domain 1: |  Describe cloud concepts | 25–30% |		
+| • Domain 2: | Describe Azure architecture and services | 35–40% | 
+| • Domain 3: | Describe Azure management and governance | 30–35% |
+
+[Exam scoring and score reports](https://learn.microsoft.com/en-us/certifications/exam-scoring-reports)  
+
+**Passing Score = 700**  
+
+65 minutes  
+40-60 questions, no negative marking so try all the questions, multiple choice  
+[Exam scoring and score reports](https://learn.microsoft.com/en-us/certifications/exam-scoring-reports)  
+
+[Exam Sign Up - Exam AZ-900: Microsoft Azure Fundamentals](https://www.aws.training/certification?src=practitioner)	**$99**  	
