--- a/pages/Certifications/Google/Digital_Cloud_Leader_Info.mdx
+++ b/pages/Certifications/Google/Digital_Cloud_Leader_Info.mdx
@@ -1,3 +1,38 @@
-# Digital Cloud Leader Info
+# GCP - Google Cloud Digital Leader Certification
 
-Satori (悟り) is a Japanese Buddhist term for awakening, "comprehension; understanding".
+```
+Below are the exact resources I used to prepare for and pass the Google Cloud Digital Leader Exam
+My general strategy was to go through all the training materials and immediately take either 
+a free set of practice questions or take a practice test. Then I would review my practice test,
+add to my notes and rinse and repeat until I was consistently getting a passing score
+```
+
+[Certification Details](https://aws.amazon.com/certification/certified-cloud-practitioner/)  
+[CLF-C01 Exam Guide](https://d1.awsstatic.com/training-and-certification/docs-cloud-practitioner/AWS-Certified-Cloud-Practitioner_Exam-Guide.pdf)
+
+| Training Resource | Time |	Cost |
+| ----------- | ----------- | ----------- | 
+| [Introduction to Digital Transformation with Google Cloud](https://www.cloudskillsboost.google/course_templates/266?utm_source=gcp_training&utm_medium=website&utm_campaign=cgc&skip_cache=true) | 3 Hours | Free | 
+| [Innovating with Data and Google Cloud](https://www.cloudskillsboost.google/course_templates/267?utm_source=gcp_training&utm_medium=website&utm_campaign=cgc&skip_cache=true) | 3 Hours | Free |	
+| [Infrastructure and Application Modernization with Google Cloud](https://www.cloudskillsboost.google/course_templates/265?utm_source=gcp_training&utm_medium=website&utm_campaign=cgc&skip_cache=true) | 3 Hours | Free |
+| [Understanding Google Cloud Security and Operations](https://www.cloudskillsboost.google/course_templates/271?utm_source=gcp_training&utm_medium=website&utm_campaign=cgc&skip_cache=true) | 2 Hours | Free |
+| [Exam Prep (sample questions)](https://docs.google.com/forms/d/e/1FAIpQLSfsSfkh9PE-HjdRRzJ24wPSjZrXF3gLxmncAYx31gyz2rLbtw/viewform) |  | Free | 
+| [Google Cloud Digital Leader Certification Course - Pass the Exam!](https://www.youtube.com/watch?v=UGRDM86MBIQ&t=19328s) | 6 Hours | YouTube |
+| [Free Practice Exam from Exam Pro](https://app.exampro.co/student/attempts/new/cdl?exam_set_id=7) | 1.5 Hours | Free |
+| [Exam Pro Practice Exams](https://app.exampro.co/student/journey/cdl) | 4 Exams | $24.99 |
+
+**Exam Details:**
+| Section | Details | % of Exam |
+| ----------- | ----------- | ----------- | 		
+| • Section 1: | Introduction to digital transformation with Google Cloud | 10% |		
+| • Section 2: | Innovating with data and Google Cloud | 30% | 
+| • Section 3: | Infrastructure and application modernization | 30% |
+| • Section 4: | Understanding Google Cloud security and operations | 30% |   	
+
+**Passing Score = 70%**		
+
+90 minutes  
+50-60 multiple choice and multiple select questions  
+[Exam Guide](https://cloud.google.com/certification/guides/cloud-digital-leader)
+
+[Google Digital Cloud Leader Exam Sign Up](https://www.webassessor.com/wa.do?page=certInfo&branding=GOOGLECLOUD&tabs=13)	**$99**	
