updated Bash Commands page

--- a/pages/Bash/Useful_Commands.mdx
+++ b/pages/Bash/Useful_Commands.mdx
@@ -2,4 +2,4 @@
 | ----------- | ----------- | ----------- | ----------- | ----------- | ----------- |
 | **find** | Finds files by filename | ``` find image.png ``` | Looking for specific files in  node libraries |  |  |
 | **grep** | Finds specific text in a a specific file | ``` grep some_text  index.js``` | search for code references inside a specific file | [Reference](https://swcarpentry.github.io/shell-novice/07-find/index.html) |
-| **grep** to a file | Copy results of a grep search into a text file | ``` grep some_text index.js > grep_result.txt ``` | If the grep results are too large to properly analyze, such as grepping in a log file, dump into a text file for ease of use |  |  Can also use the 'pipe' instead of the 'right carrot' > to 'pipe' out text to a file, it just doens't work in this markdown syntax for reasons only I know, or you can look at the code in github and you'll get what I mean. |
+| **grep** to a file | Copy results of a grep search into a text file | ``` grep some_text index.js > grep_result.txt ``` | If the grep results are too large to properly analyze, such as grepping in a log file, dump into a text file for ease of use |  |  Can also use the 'pipe' instead of the 'right carrot' > to 'pipe' out text to a file, it just doens't work in this markdown syntax for reasons only I know, or you can look at the code in [github](https://github.com/smmalik3/justDaNotes/blob/main/pages/Bash/Useful_Commands.mdx) and you'll get what I mean. Or peek the [raw code](https://raw.githubusercontent.com/smmalik3/justDaNotes/main/pages/Bash/Useful_Commands.mdx) |
