Updated Azure Data Engineering Exam details

--- a/pages/Certifications/Azure/Azure_Data_Engineer_Associate_Info.mdx
+++ b/pages/Certifications/Azure/Azure_Data_Engineer_Associate_Info.mdx
@@ -32,12 +32,10 @@ you should take that several times before starting the Udemy practice exams.
 | • Domain 2: | Develop data processing | 40%–45% | 
 | • Domain 3: | Secure, monitor, and optimize data storage and data processing | 30–35% |
 
-[Exam scoring and score reports](https://learn.microsoft.com/en-us/certifications/exam-scoring-reports#scores-needed-to-pass-exams)  
-
 **Passing Score = 700**  
 
-65 minutes  *Unverified*  
+120 minutes  
 40-60 questions, no negative marking so try all the questions, multiple choice  *Unverified*  
 [Exam scoring and score reports](https://learn.microsoft.com/en-us/certifications/exam-scoring-reports)  
 
-[Exam Sign Up - Exam DP-203: Data Engineering on Microsoft Azure](https://www.aws.training/certification?src=practitioner)	**$165**  	
+[Exam Sign Up - Exam DP-203: Data Engineering on Microsoft Azure](https://examregistration.microsoft.com/?locale=en-us&examcode=DP-203&examname=Exam%20DP-203:%20Data%20Engineering%20on%20Microsoft%20Azure&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fdp-203)	**$165**  	
