Updated Resource Comparison Table

--- a/pages/Certifications/Cloud_Resource_Comparision.mdx
+++ b/pages/Certifications/Cloud_Resource_Comparision.mdx
@@ -1,22 +1,22 @@
-| Resource Type | AWS |	Azure |	GCP |
+| **Resource Type** | **AWS** |	**Azure** |	**GCP** |
 | ----------- | ----------- | ----------- | ----------- |
-| NoSQL DB | DynamoDB | CosmosDB | FireStore |
-| Data Warehouse | RDS | DataLake |	BigQuery |
-| Object Storage |	S3 | Container | Cloud Storage |
-| SQL DB | RDS | MySQL | Cloud SQL |
-| Serverless Compute | Lamba | Functions (aka Function Apps) |	Cloud Functions |
-| Long Term Storage | Glacier |	Archive | Archive |
-| Infrequent (< 30 days) Access Storage | IA S3 | Cool | Nearline |
-| Infrequent (> 30 days) Access Storage |   | Coldline |
-| Frequent Access Storage |	S3 Standard | Standard | Standard |
-| Physical Data Transfer Service | Snow Family |   | Transfer Appliance |
-| Containers |	ECS - Elastic Container Service | Container Instances |	Cloud Run |
-| Container Orchestration |	EKS - Elastic Kubernetes Service | AKS - Azure Kubernetes Service | GKE - Google Kubernetes Engine |
-| Messaging/Queue Service |	SQS and SNS | Event Grid and Event Hub | Pub/Sub |
-| Cheapest VM Type | Spot Instances |   | Preemptible VMs |
-| CDN |	CloudFront |  | Cloud CDN |
-| Mountable File Share | EBS |  | Cloud Filestore |
-| Data Pipeline |  | Azure DataFactory | Cloud Data Fusion |
-| Managed Server Side Website Builder/Service |	AWS Amplify |  | App Engine |
-| Total Cost of Ownership Tool |  |  |  |			
-| Pricing Calculator | Pricing Calculator |	Pricing Calculator | Pricing Calculator |
+| **NoSQL DB** | DynamoDB | CosmosDB | FireStore |
+| **Data Warehouse** | RDS | DataLake |	BigQuery |
+| **Object Storage** |	S3 | Container | Cloud Storage |
+| **SQL DB** | RDS | MySQL | Cloud SQL |
+| **Serverless Compute** | Lamba | Functions (aka Function Apps) |	Cloud Functions |
+| **Long Term Storage** | Glacier |	Archive | Archive |
+| **Infrequent (< 30 days) Access Storage** | IA S3 | Cool | Nearline |
+| **Infrequent (> 30 days) Access Storage** |   | Coldline |
+| **Frequent Access Storage** |	S3 Standard | Standard | Standard |
+| **Physical Data Transfer Service** | Snow Family |   | Transfer Appliance |
+| **Containers** |	ECS - Elastic Container Service | Container Instances |	Cloud Run |
+| **Container Orchestration** |	EKS - Elastic Kubernetes Service | AKS - Azure Kubernetes Service | GKE - Google Kubernetes Engine |
+| **Messaging/Queue Service** |	SQS and SNS | Event Grid and Event Hub | Pub/Sub |
+| **Cheapest VM Type** | Spot Instances |   | Preemptible VMs |
+| **CDN** |	CloudFront |  | Cloud CDN |
+| **Mountable File Share** | EBS |  | Cloud Filestore |
+| **Data Pipeline** |  | Azure DataFactory | Cloud Data Fusion |
+| **Managed Server Side Website Builder/Service** |	AWS Amplify |  | App Engine |
+| **Total Cost of Ownership Tool** |  |  |  |			
+| **Pricing Calculator** | Pricing Calculator |	Pricing Calculator | Pricing Calculator |
