Updated Resource Comparison page

--- a/pages/Certifications/Cloud_Resource_Comparision.mdx
+++ b/pages/Certifications/Cloud_Resource_Comparision.mdx
@@ -20,3 +20,4 @@
 | **Managed Server Side Website Builder/Service** |	AWS Amplify |  | App Engine |
 | **Total Cost of Ownership Tool** |  |  |  |			
 | **Pricing Calculator** | Pricing Calculator |	Pricing Calculator | Pricing Calculator |
+| **IaC** | CloudFormation | Azure Resource Manager (ARM) | Google Cloud Deployment Manager + Terraform |
